main-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-frontend
  template:
    metadata:
      labels:
        app: main-frontend
    spec:
      containers:
      - name: main-frontend
        image: mayusharathod/assessment-task:frontendv1
        ports:
        - containerPort: 80
