my-order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-order
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-order
  template:
    metadata:
      labels:
        app: my-order
    spec:
      containers:
      - name: my-order
        image: mayusharathod/assessment-task:orderv1
        ports:
        - containerPort: 80
