my-catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-catalog-service
spec:
  selector:
    app: my-catalog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
