my-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-order-service
spec:
  selector:
    app: my-order
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
